cmake_minimum_required(VERSION 3.24)
project(Sorts_xz)

set(CMAKE_CXX_STANDARD 17)

add_executable(Sorts_xz main.cpp "../CLion 2022.3.2/bin/mingw/include/Sorts.h" "../CLion 2022.3.2/bin/mingw/include/Sorts.cpp" "../CLion 2022.3.2/bin/mingw/include/Tests.h" "../CLion 2022.3.2/bin/mingw/include/Tests.cpp" "../CLion 2022.3.2/bin/mingw/include/List.h" "../CLion 2022.3.2/bin/mingw/include/List.cpp")
